--- a/comicagg/templates/v2010/agregator/organize_add.html
+++ b/comicagg/templates/v2010/agregator/organize_add.html
@@ -3,6 +3,7 @@
 {% block title %}{% trans 'Add comics' %} - {% endblock %}
 {% block extra_head %}
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
+		<script src="{{ mediaurl}}js/organize.js" type="text/javascript"></script>
 		<script type="text/javascript">
 var usercomics = [
 {% for comic in user_comics %}
