--- a/comicagg/templates/v2010/agregator/organize_add.html
+++ b/comicagg/templates/v2010/agregator/organize_add.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans 'Add comics' %} - {% endblock %}
 {% block extra_head %}
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
-		<script src="{{ mediaurl}}js/organize.js" type="text/javascript"></script>
+		<script src="{{ mediaurl}}js/v2010/organize.js" type="text/javascript"></script>
 		<script type="text/javascript">
 var usercomics = [
 {% for comic in user_comics %}
@@ -34,7 +34,7 @@ dojo.addOnLoad(initAdd);
 		<div id="comic_info_wrap" style="display:none">
 			<h3 id="comic_name"></h3>
 			<h4 id="comic_new">{% trans "New comic!" %}</h4>
-			<p style="float:left">{% trans "Score" %}: <b><span id="comic_score">{{ comic.getRating }}</span>%</b> (<span id="comic_votes">{{ comic.votes }}</span> {% trans "votes" %})</p>
+			<p>{% trans "Score" %}: <b><span id="comic_score">{{ comic.getRating }}</span>%</b> (<span id="comic_votes">{{ comic.votes }}</span> {% trans "votes" %})</p>
 			<p>{% trans "Readers" %}: <b><span id="comic_readers">{{ comic.readers }}</span></b></p>
 			<p><a id="comic_url">{% trans "Link to its website"%}</a></p>
 			<p>{% trans "Last update:" %}&nbsp;<b><span id="comic_updated"></span></b></p>
