--- a/comicagg/templates/v2010/agregator/read.html
+++ b/comicagg/templates/v2010/agregator/read.html
@@ -2,90 +2,90 @@
 {% load i18n %}
 {% block title %}{% trans 'Read comics' %} -{% endblock %}
 {% block extra_head %}
-		<script src="{{ mediaurl }}js/v2010/read.js" type="text/javascript"></script>
+        <script src="{{ mediaurl }}js/v2010/read.js" type="text/javascript"></script>
 {% endblock%}
 {% block onload %}onReadLoad();{% endblock %}
 {% block content %}
 <script language="javascript">
-	var titlei18n = "{% trans 'Read comics' %}";
-	var unreadCounter = {{ unread_list|length }};
-	var comicCounter = {{ comic_list|length }};
-	var unreadComics = new Array();
-	var comics = new Array();
+    var titlei18n = "{% trans 'Read comics' %}";
+    var unreadCounter = {{ unread_list|length }};
+    var comicCounter = {{ comic_list|length }};
+    var unreadComics = new Array();
+    var comics = new Array();
 {% for comic,unreadlist in unread_list %}
-	unreadComics[{{ comic.id }}] = true;
+    unreadComics[{{ comic.id }}] = true;
 {% endfor %}
 {% for comic,unreadlist in comic_list %}
-	tmp = Array();
+    tmp = Array();
 {% if not comic.noimages or perms.agregator.all_images %}
-	{% for unread in unreadlist %}
-	tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:""|safe }}"});
-	{% endfor %}
+    {% for unread in unreadlist %}
+    tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:"" }}"});
+    {% endfor %}
 {% endif %}
-	c = {"name":"{{ comic.name}}", "id":{{ comic.id }},
+    c = {"name":"{{ comic.name}}", "id":{{ comic.id }},
 {% if not comic.noimages or perms.agregator.all_images %}
-		"last_url":"{{ comic.last_image|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:""|safe }}", "list":tmp,
+        "last_url":"{{ comic.last_image|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp,
 {% endif %}
-		"error":false, "loaded":false,};
-	comics[{{ comic.id }}] = c;
-{% endfor %}	
+        "error":false, "loaded":false,};
+    comics[{{ comic.id }}] = c;
+{% endfor %}    
 </script>
 <div id="read">
-	<div class="extras_div">
-		<p class="info">{% blocktrans %}There are 0 new news items{% endblocktrans %}</p>
-		<p class="info">{% blocktrans %}There are 0 new comics in the database.{% endblocktrans %}</p>
-	</div>
-	<div>
-		<p class="info" id="unreadCounters">{% blocktrans with comic_list|length as len with unread_list|length as unr %}You are reading <b id="unreadCountersTotal">{{ len }}</b> comics and <b id="unreadCountersUnread">{{ unr }}</b> of them have unread strips.{% endblocktrans %}</p>
-		<p class="info" id="noUnreadCounters" style="display:none">{% blocktrans with comic_list|length as len with unread_list|length as unr %}You are reading <b id="noUnreadCountersTotal">{{ len }}</b> comics and none of them have unread strips.{% endblocktrans %}</p>
-		<p class="info" id="showingUnread">{% blocktrans %}Showing only <b>unread</b> comics. <a href="#" onclick="showAllComics()">Click here</a> to show all comics.{% endblocktrans %}</p>
-		<p class="info" id="showingAll" style="display:none">{% blocktrans %}Showing <b>all</b> comics. <a href="#" onclick="showUnreadComics()">Click here</a> to show only unread comics.{% endblocktrans %}</p>
-	</div>
-	<div id="comics">
-	{% for comic,unreadlist in comic_list %}
-	<div id="c{{ comic.id }}" class="comic" style="{% if not unreadlist %}display:none{% endif %}">
-		<h3>{{ comic.name }}</h3>
-		{% if unreadlist %}<span id="newnotice{{ comic.id }}" class="newstripsnotice">{% trans "New strips!" %}</span>{% endif %}
-		<div class="striplist">
-		{% if comic.noimages and not perms.agregator.all_images %}
-			{% blocktrans with comic.url as url %}The comic has been updated. <a href="{{ url }}">Click here</a> to go to the comic's website.{% endblocktrans %}
-		{% else %}
-			{% for unread in unreadlist %}
-			<h5>{{ unread.history.date|date:"d F Y" }}</h5>
-			<img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/v2010/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/><br/>
-			{% empty %}
-			<h5>{{ comic.last_check|date:"d F Y" }}</h5>
-			<img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/v2010/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/>
-			{% endfor %}
-		{% endif %}
-		</div>
-		<div class="comicextra">
-			<div class="anims">
-				<img id="working{{ comic.id }}" src="{{ mediaurl }}images/loaderarrows.gif" alt="" style="display:none"/>
-				<img id="workingerror{{ comic.id }}" src="{{ mediaurl }}images/error12.png" alt="" style="display:none"/>
-				<img id="ok{{ comic.id }}" src="{{ mediaurl }}images/ok12.png" alt="" style="display:none"/>
-				&nbsp;
-			</div>
-			<span class="wrap">
-				<span id="reload{{ comic.id }}" class="reload" style="display:none"><a onclick="reloadComic({{ comic.id }})">{% trans "Reload images" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-				{% if unreadlist %}
-				<span id="reading{{ comic.id }}">
-					<a onclick="markread({{ comic.id }}, 0)">{% trans "Mark as read"%}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					{% trans "Vote" %}&nbsp;&nbsp;
-					<a onclick="markread({{ comic.id }}, -1)"><img src="{{ mediaurl }}/images/vote_down.png" alt="vote up"/></a>&nbsp;&nbsp;
-					<a onclick="markread({{ comic.id }}, 1)"><img src="{{ mediaurl }}/images/vote_up.png" alt="vote up"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-				</span>
-				{% endif %}
-				<a onclick="reportbroken({{ comic.id }})">{% trans "Report broken image" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a onclick="removecomic({{ comic.id }})">{% trans "Remove this comic" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			</span>
-		</div>
-		<h5 id="outc{{ comic.id }}"></h5>
-	</div>
-	{% endfor %}
-	<div id="noComicsSelected" style="display:none">
-	{% trans "You haven't selected any comics!" %}
-	</div>
-	</div>
+    <div class="extras_div">
+        <p class="info">{% blocktrans %}There are 0 new news items{% endblocktrans %}</p>
+        <p class="info">{% blocktrans %}There are 0 new comics in the database.{% endblocktrans %}</p>
+    </div>
+    <div>
+        <p class="info" id="unreadCounters">{% blocktrans with comic_list|length as len with unread_list|length as unr %}You are reading <b id="unreadCountersTotal">{{ len }}</b> comics and <b id="unreadCountersUnread">{{ unr }}</b> of them have unread strips.{% endblocktrans %}</p>
+        <p class="info" id="noUnreadCounters" style="display:none">{% blocktrans with comic_list|length as len with unread_list|length as unr %}You are reading <b id="noUnreadCountersTotal">{{ len }}</b> comics and none of them have unread strips.{% endblocktrans %}</p>
+        <p class="info" id="showingUnread">{% blocktrans %}Showing only <b>unread</b> comics. <a href="#" onclick="showAllComics()">Click here</a> to show all comics.{% endblocktrans %}</p>
+        <p class="info" id="showingAll" style="display:none">{% blocktrans %}Showing <b>all</b> comics. <a href="#" onclick="showUnreadComics()">Click here</a> to show only unread comics.{% endblocktrans %}</p>
+    </div>
+    <div id="comics">
+    {% for comic,unreadlist in comic_list %}
+    <div id="c{{ comic.id }}" class="comic" style="{% if not unreadlist %}display:none{% endif %}">
+        <h3>{{ comic.name }}</h3>
+        {% if unreadlist %}<span id="newnotice{{ comic.id }}" class="newstripsnotice">{% trans "New strips!" %}</span>{% endif %}
+        <div class="striplist">
+        {% if comic.noimages and not perms.agregator.all_images %}
+            {% blocktrans with comic.url as url %}The comic has been updated. <a href="{{ url }}">Click here</a> to go to the comic's website.{% endblocktrans %}
+        {% else %}
+            {% for unread in unreadlist %}
+            <h5>{{ unread.history.date|date:"d F Y" }}</h5>
+            <img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/v2010/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/><br/>
+            {% empty %}
+            <h5>{{ comic.last_check|date:"d F Y" }}</h5>
+            <img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/v2010/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/>
+            {% endfor %}
+        {% endif %}
+        </div>
+        <div class="comicextra">
+            <div class="anims">
+                <img id="working{{ comic.id }}" src="{{ mediaurl }}images/loaderarrows.gif" alt="" style="display:none"/>
+                <img id="workingerror{{ comic.id }}" src="{{ mediaurl }}images/error12.png" alt="" style="display:none"/>
+                <img id="ok{{ comic.id }}" src="{{ mediaurl }}images/ok12.png" alt="" style="display:none"/>
+                &nbsp;
+            </div>
+            <span class="wrap">
+                <span id="reload{{ comic.id }}" class="reload" style="display:none"><a onclick="reloadComic({{ comic.id }})">{% trans "Reload images" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                {% if unreadlist %}
+                <span id="reading{{ comic.id }}">
+                    <a onclick="markread({{ comic.id }}, 0)">{% trans "Mark as read"%}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    {% trans "Vote" %}&nbsp;&nbsp;
+                    <a onclick="markread({{ comic.id }}, -1)"><img src="{{ mediaurl }}/images/vote_down.png" alt="vote up"/></a>&nbsp;&nbsp;
+                    <a onclick="markread({{ comic.id }}, 1)"><img src="{{ mediaurl }}/images/vote_up.png" alt="vote up"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </span>
+                {% endif %}
+                <a onclick="reportbroken({{ comic.id }})">{% trans "Report broken image" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a onclick="removecomic({{ comic.id }})">{% trans "Remove this comic" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            </span>
+        </div>
+        <h5 id="outc{{ comic.id }}"></h5>
+    </div>
+    {% endfor %}
+    <div id="noComicsSelected" style="display:none" class="box">
+    {% trans "You haven't selected any comics!" %}
+    </div>
+    </div>
 </div>
 {% endblock %}
