--- a/comicagg/templates/v2010/agregator/organize_add.html
+++ b/comicagg/templates/v2010/agregator/organize_add.html
@@ -1,6 +1,6 @@
 {% extends 'agregator/organize_base.html' %}
 {% load i18n agregator_tags %}
-{% block title %}{% trans 'Add comics' %} - {% endblock %}
+{% block title %}{% trans 'Choose' %} - {% endblock %}
 {% block extra_head %}
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
 		<script src="{{ mediaurl}}js/v2010/organize.js" type="text/javascript"></script>
