Actualizar localización y el título de la página de solicitudes

--- a/comicagg/templates/v2010/agregator/request_index.html
+++ b/comicagg/templates/v2010/agregator/request_index.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n agregator_tags %}
-<!-- {% block title %}{% trans 'Read' %} -{% endblock %} -->
-{% block extra_head %}
-        <script src="{{ mediaurl }}js/v2010/read.js" type="text/javascript"></script>
-{% endblock%}
+{% block title %}{% trans 'Requests' %} -{% endblock %}
 {% block content %}
 {% regroup user.request_set.all by done as request_list %}
 <div id="request_list" class="box">
