Tratar con python las imagenes con referer.

--- a/comicagg/templates/v2010/agregator/read.html
+++ b/comicagg/templates/v2010/agregator/read.html
@@ -24,7 +24,7 @@
 {% endif %}
     c = {"name":"{{ comic.name}}", "id":{{ comic.id }},
 {% if not comic.noimages or perms.agregator.all_images %}
-        "last_url":"{{ comic.last_image|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp,
+        "last_url":"{{ comic.get_url|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp,
 {% endif %}
         "error":false, "loaded":false,};
     comics[{{ comic.id }}] = c;
