Forgetting new comics in the add page works now.

--- a/comicagg/templates/v2010/base.html
+++ b/comicagg/templates/v2010/base.html
@@ -17,6 +17,7 @@
 			var url_forget_new_blogs = '{% url forget_new_blogs %}';
 			var url_forget_new_comics = '{% url forget_new_comics %}';
 			var url_forget_new_comics_quick = '{% url forget_new_comics_quick %}';
+			var url_forget_new_comic = '{% url forget_new_comic 0 %}';
 			var url_rate = '{% url rate %}';
 			var url_mark_as_read = '{% url mark_read %}';
 			var url_save_tags = '{% url save_tags %}';
