--- a/comicagg/templates/v2010/base.html
+++ b/comicagg/templates/v2010/base.html
@@ -20,6 +20,7 @@
 			var url_forget_new_comic = '{% url forget_new_comic 0 %}';
 			var url_rate = '{% url rate %}';
 			var url_mark_as_read = '{% url mark_read %}';
+			var url_mark_all_read = '{% url mark_all_read %}';
 			var url_save_tags = '{% url save_tags %}';
 			var url_organize = '{% url organize %}';
 			var url_save_selection = '{% url save_selection %}';
