reported images admin page

--- a/comicagg/templates/v2010/agregator/read.html
+++ b/comicagg/templates/v2010/agregator/read.html
@@ -19,7 +19,7 @@
 	tmp = Array();
 	{% if not comic.noimages or perms.agregator.all_images %}
 		{% for unread in unreadlist %}
-	tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:"" }}"});
+	tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "chid":{{ unread.history.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:"" }}"});
 		{% endfor %}
 	{% endif %}
 	c = {"name":"{{ comic.name}}", "id":{{ comic.id }}, {% if not comic.noimages or perms.agregator.all_images %}"last_url":"{{ comic.get_url|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp, {% endif %}"error":false, "loaded":false,};
