Show both organize options in the menu instead of just one.

--- a/comicagg/templates/v2010/agregator/organize_base.html
+++ b/comicagg/templates/v2010/agregator/organize_base.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
-<a href="{% url organize_add %}">Elegir los comics</a>, <a href="{% url organize %}">organizar los comics</a>.
+<!-- <a href="{% url organize_add %}">Elegir los comics</a>, <a href="{% url organize %}">organizar los comics</a>. -->
 {% block orgcontent %}
 {% endblock %}
 {% endblock %}
