Make comics open in a new window in the add page.

--- a/comicagg/media/css/v2010/base.css
+++ b/comicagg/media/css/v2010/base.css
@@ -410,6 +410,9 @@ button:hover {
 #comic_info_wrap {
 /* 	margin-left:1em; */
 }
+#hover_notice {
+	text-align:center;
+}
 input.filter {
 	background:white;
 	color:#666;
