Removed unnecessary code in the model. Fixed css bug in the top info of the read page.

--- a/comicagg/media/css/v2010/base.css
+++ b/comicagg/media/css/v2010/base.css
@@ -223,6 +223,7 @@ button:hover {
 	padding:2px;
 	-moz-border-radius:4pt;
 	-webkit-border-radius:4pt;
+	z-index:-10;
 }
 #read .top_info div {
 	text-align:right;
