--- a/comicagg/templates/v2010/agregator/organize_add.html
+++ b/comicagg/templates/v2010/agregator/organize_add.html
@@ -6,19 +6,13 @@
 		<script src="{{ mediaurl}}js/v2010/organize.js" type="text/javascript"></script>
 		<script type="text/javascript">
 var usercomics = [
-{% for comic in user_comics %}
-	{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':{{ comic.getRating|perc:2 }}, 'votes':{{ comic.votes }}, 'noimages':{{ comic.noimages|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_check|date:"j F, Y" }}", 'readers':{{ comic.readers }}, 'last':"{{ comic.get_url|safe}}", 'url_forget':"{% url forget_new_comic comic.id %}"},
-{% endfor %}
+{% for comic in user_comics %}{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':{{ comic.getRating|perc:2 }}, 'votes':{{ comic.votes }}, 'noimages':{{ comic.noimages|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_check|date:"j F, Y" }}", 'readers':{{ comic.readers }}, 'last':"{{ comic.get_url|safe}}", 'url_forget':"{% url forget_new_comic comic.id %}"},{% endfor %}
 ];
 var availablecomics = [
-{% for comic in all_comics %}
-	{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':{{ comic.getRating|perc:2 }}, 'votes':{{ comic.votes }}, 'noimages':{{ comic.noimages|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_check|date:"j F, Y" }}", 'readers':{{ comic.readers }}, 'last':"{{ comic.get_url|safe }}", 'url_forget':"{% url forget_new_comic comic.id %}"},
-{% endfor %}
+{% for comic in all_comics %}{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':{{ comic.getRating|perc:2 }}, 'votes':{{ comic.votes }}, 'noimages':{{ comic.noimages|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_check|date:"j F, Y" }}", 'readers':{{ comic.readers }}, 'last':"{{ comic.get_url|safe }}", 'url_forget':"{% url forget_new_comic comic.id %}"},{% endfor %}
 ];
 var availablecomics_new = [
-{% for newcomic in new_comics %}
-	{'id':{{ newcomic.comic.id}}, 'name':"{{ newcomic.comic.name|escape }}", 'slug':"{{ newcomic.comic.name|slugify }}", 'score':{{ newcomic.comic.getRating|perc:2 }}, 'votes':{{ newcomic.comic.votes }}, 'noimages':{{ newcomic.comic.noimages|lower }}, 'url': "{{ newcomic.comic.website }}", 'updated':"{{ newcomic.comic.last_check|date:"j F, Y" }}", 'readers':{{ newcomic.comic.readers }}, 'last':"{{ newcomic.comic.get_url|safe }}", 'url_forget':"{% url forget_new_comic newcomic.comic.id %}"},
-{% endfor %}
+{% for newcomic in new_comics %}{'id':{{ newcomic.comic.id}}, 'name':"{{ newcomic.comic.name|escape }}", 'slug':"{{ newcomic.comic.name|slugify }}", 'score':{{ newcomic.comic.getRating|perc:2 }}, 'votes':{{ newcomic.comic.votes }}, 'noimages':{{ newcomic.comic.noimages|lower }}, 'url': "{{ newcomic.comic.website }}", 'updated':"{{ newcomic.comic.last_check|date:"j F, Y" }}", 'readers':{{ newcomic.comic.readers }}, 'last':"{{ newcomic.comic.get_url|safe }}", 'url_forget':"{% url forget_new_comic newcomic.comic.id %}"},{% endfor %}
 ];
 dojo.addOnLoad(initAdd);
 		</script>
@@ -27,22 +21,24 @@ dojo.addOnLoad(initAdd);
 {% block orgcontent %}
 <div id="add">
 	<h3>{% trans "Add comics" %}</h3>
-	<div id="comic_info">
-		<p id="hover_notice"><b>{% trans "Hover over a comic to see details." %}</b></p>
-		<div id="comic_info_wrap" style="display:none">
-			<h3 id="comic_name"></h3>
-			<h4 id="comic_new">{% trans "New comic!" %}</h4>
-			<p>{% trans "Score" %}: <b><span id="comic_score">{{ comic.getRating }}</span>%</b> (<span id="comic_votes">{{ comic.votes }}</span> {% trans "votes" %}, <span id="comic_readers">{{ comic.readers }}</span> {% trans "readers" %}).</p>
-			<p><a id="comic_url">{% trans "Link to its website"%}</a></p>
-			<p id="comic_image">
-				<img id="loading" src="{{ mediaurl }}images/loading.gif" alt="" style="display:none"/>
-				<img id="comic_last" src="" alt="" title="" style="display:none"/>
-			</p>
-			<p id="noimages" style="display:none">{% trans "<b>Warning!</b> Instead of showing the images of this comic, you will see a link to its website when the comic updates." %}</p>
-		</div>
-	</div>
+	<div id="comic_info_outer">
+        <p><b>{% trans "Hover over a comic to see details." %}</b></p>
+        <div id="comic_info">
+            <p id="hover_notice"><b>{% trans "Hover over a comic to see details." %}</b></p>
+            <div id="comic_info_wrap" style="display:none">
+                <h3 id="comic_name"></h3>
+                <h4 id="comic_new">{% trans "New comic!" %}</h4>
+                <p>{% trans "Score" %}: <b><span id="comic_score">{{ comic.getRating }}</span>%</b> (<span id="comic_votes">{{ comic.votes }}</span> {% trans "votes" %}, <span id="comic_readers">{{ comic.readers }}</span> {% trans "readers" %}).</p>
+                <p><a id="comic_url">{% trans "Link to its website"%}</a></p>
+                <p id="comic_image">
+                    <img id="loading" src="{{ mediaurl }}images/loading.gif" alt="" style="display:none"/>
+                    <img id="comic_last" src="" alt="" title="" style="display:none"/>
+                </p>
+                <p id="noimages" style="display:none">{% trans "<b>Warning!</b> Instead of showing the images of this comic, you will see a link to its website when the comic updates." %}</p>
+            </div>
+        </div>
+    </div>
 	<div id="comic_list_wrap">
-		<p><b>{% trans "Hover over a comic to see details." %}</b></p>
 		<input id="filter" type="text" value="Escribe aquí para filtrar" class="filter" onclick="switchFilter(false)"/>
 		<input id="filterReal" type="text" value="" class="filter" style="display:none" onblur="switchFilter(true)" onkeyup="filter(this.value)"/>
 		<ul id="comic_list">
@@ -53,9 +49,10 @@ dojo.addOnLoad(initAdd);
 	</div>
 	<script type="text/javascript">
 		// Ajusta la altura de la lista de comics
-		$('comic_info').style.top = $('comic_list').cumulativeOffset()['top'] + "px";
-		var h = $('comic_info').getDimensions()['height'];
+		$('comic_info_outer').style.top = $('comic_list').cumulativeOffset()['top'] - $$("#comic_info_outer>p")[0].getDimensions()['height'] + "px";
+		var h = $('comic_info_outer').getDimensions()['height'] - 20;
 		$('comic_list').style.height = h+"px";
+        $('comic_info').style.height = h-8+"px";
 	</script>
 </div>
 {% endblock %}
